
cmake_minimum_required( VERSION 2.6 )
project( "ircio" )
set( ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
set( CMAKE_INSTALL_PREFIX ${ROOT}/build.app )
if ( WIN32 )
    include( "./config-win.cmake" )
endif ( WIN32 )
add_subdirectory( "./3dparty" )
add_subdirectory( "./peer_abst" )
add_subdirectory( "./peer_qxmpp" )
if ( UNIX )
    add_subdirectory( "./mcuctrl" )
    add_subdirectory( "./luamcuctrl" )
    add_subdirectory( "./app_host" )
endif ( UNIX )
add_subdirectory( "./app_client" )
if ( UNIX )
    add_subdirectory( "./joyctrl" )
elseif ( WIN32 )
    add_subdirectory( "./joyctrl_win" )
endif ( UNIX )
add_subdirectory( "./joyctrl_top" )
add_subdirectory( "./luajoyctrl" )
add_subdirectory( "./tests" )
